8078113: 8011102 changes may cause incorrect results

Replace Vzeroupper instruction in stubs with zeroing only used ymm registers.

Reviewed-by: kvn